k8s/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: my-Ingress
  namespace: retail-shop
spec:
  rules:
    - host: retail.local
      http:
        paths:
          - path: /
            pathType: prefix
            backend: 
              service:
                name: frontend-service
                port: 
                  number: 80
          - path: /api
            pathType: prefix
            backend:  
              service:
                name: backend
                port: 
                  number: 5001
